--- a/audio_score2.ipynb
+++ b/audio_score2.ipynb
@@ -39,8 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import librosa\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -71,14 +73,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load audio and lyrics data\n",
-    "original_audio, sr = librosa.load(\"data/original_audio.wav\", sr=None, mono=True)\n",
-    "track_audio, sr = librosa.load(\"data/track.wav\",sr=None, mono=True)  # Assuming same sample rate for all audios\n",
-    "audio_chunks = [librosa.load(f\"data/part{i}.wav\", sr=None, mono=True)[0] for i in range(1, 4)]  # Loading all audio chunks\n",
+    "# Paths\n",
+    "base_dir = \"data\"\n",
+    "lyrics_dir = os.path.join(base_dir, \"SongsLyrics\", \"Lyrics\")\n",
+    "track_dir = os.path.join(base_dir, \"SongsLyrics\", \"Track\")\n",
+    "voice_dir = os.path.join(base_dir, \"SongsLyrics\", \"Voice\")\n",
     "\n",
-    "# Load lyrics\n",
-    "with open(\"data/lyrics.lrc\", 'r') as f:\n",
-    "    raw_lyrics_data = f.read()\n"
+    "# Generate the dictionary\n",
+    "data_dict = {}\n",
+    "\n",
+    "# Fill attempted songs\n",
+    "for song_file in os.listdir(base_dir):\n",
+    "    if song_file.endswith(\".wav\"):\n",
+    "        song_id = os.path.splitext(song_file)[0]\n",
+    "        data_dict[song_id] = {\"Attempted\": os.path.join(base_dir, song_file)}\n",
+    "\n",
+    "# Fill lyrics\n",
+    "for lyrics_file in os.listdir(lyrics_dir):\n",
+    "    song_id = lyrics_file.split('_')[0]\n",
+    "    if song_id in data_dict:\n",
+    "        data_dict[song_id][\"Lyrics\"] = os.path.join(lyrics_dir, lyrics_file)\n",
+    "\n",
+    "# Fill tracks\n",
+    "for track_file in os.listdir(track_dir):\n",
+    "    song_id = os.path.splitext(track_file)[0]\n",
+    "    if song_id in data_dict:\n",
+    "        data_dict[song_id][\"Track\"] = os.path.join(track_dir, track_file)\n",
+    "\n",
+    "# Fill voices\n",
+    "for voice_file in os.listdir(voice_dir):\n",
+    "    if \"voice_1\" in voice_file:\n",
+    "        song_id = voice_file.split('_')[0]\n",
+    "        if song_id in data_dict:\n",
+    "            data_dict[song_id][\"Original\"] = os.path.join(voice_dir, voice_file)\n",
+    "    elif \"voice_2\" in voice_file:\n",
+    "        song_id = voice_file.split('_')[0]\n",
+    "        if song_id in data_dict:\n",
+    "            data_dict[song_id][\"Original Second\"] = os.path.join(voice_dir, voice_file)\n",
+    "    else:\n",
+    "        song_id = os.path.splitext(voice_file)[0]\n",
+    "        if song_id in data_dict:\n",
+    "            data_dict[song_id][\"Original\"] = os.path.join(voice_dir, voice_file)\n",
+    "\n",
+    "# Print a sample\n",
+    "print(data_dict.get(\"42029\", {}))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize counters\n",
+    "all_files_count = 0\n",
+    "only_attempt_count = 0\n",
+    "only_original_count = 0\n",
+    "\n",
+    "usable_ids = []\n",
+    "\n",
+    "# Iterate through the dictionary to count\n",
+    "for song_id, song_data in data_dict.items():\n",
+    "    if \"Attempted\" in song_data and \"Lyrics\" in song_data and \"Track\" in song_data and (\"Original\" in song_data or \"Original Second\" in song_data):\n",
+    "        usable_ids.append(song_id)\n",
+    "        all_files_count += 1\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"Number of IDs with all files: {all_files_count}\")\n",
+    "print(usable_ids)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_song_data(song_id):\n",
+    "    song_data = data_dict.get(song_id, {})\n",
+    "    if \"Attempted\" in song_data and \"Lyrics\" in song_data and \"Track\" in song_data and (\"Original\" in song_data or \"Original Second\" in song_data):\n",
+    "        original_audio, sr = librosa.load(song_data['Original'], sr=None, mono=True)\n",
+    "        attempted_audio, sr = librosa.load(song_data['Attempted'], sr=None, mono=True)\n",
+    "        track_audio, sr = librosa.load(song_data['Track'], sr=None, mono=True)\n",
+    "        return original_audio, attempted_audio, track_audio, song_data['Lyrics'], sr\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "# Get the song data\n",
+    "song_data = get_song_data(\"44957\")\n",
+    "print(song_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_audio, attempted_audio, track_audio, raw_lyrics_data, sr = get_song_data(\"27256\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av = AudioVis()\n",
+    "\n",
+    "av.wav_plot(original_audio, sr, title=\"Original Audio\")\n",
+    "av.play_audio(original_audio, sr)\n",
+    "\n",
+    "av.wav_plot(attempted_audio, sr, title=\"Attempted Audio\")\n",
+    "av.play_audio(attempted_audio, sr)\n",
+    "\n",
+    "av.wav_plot(track_audio, sr, title=\"Track Audio\")\n",
+    "av.play_audio(track_audio, sr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To simulate receiving audio in chunks, I have created split_into_chunks\n",
+    "def split_into_chunks(audio, num_chunks=5):\n",
+    "    \"\"\"Splits the audio data into a specified number of chunks.\"\"\"\n",
+    "    chunk_size = len(audio) // num_chunks\n",
+    "    chunks = [audio[i:i + chunk_size] for i in range(0, len(audio), chunk_size)]\n",
+    "    return chunks[:num_chunks]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks = split_into_chunks(attempted_audio, 10)\n",
+    "\n",
+    "chunk = chunks[0]\n",
+    "av.wav_plot(chunk, sr, title=\"Original Audio\")\n",
+    "av.play_audio(chunk, sr)\n"
    ]
   },
   {
@@ -129,7 +266,7 @@
    "outputs": [],
    "source": [
     "karaoke_data.reset_alignment()  # Resetting any prior alignments\n",
-    "karaoke_data.align_audio(audio_chunks[0], method=\"start\")\n",
+    "karaoke_data.align_audio(chunk, method=\"start\")\n",
     "print(f\"Position after start alignment: {karaoke_data.current_position}\")\n"
    ]
   },
@@ -147,7 +284,7 @@
    "outputs": [],
    "source": [
     "karaoke_data.reset_alignment()  # Resetting any prior alignments\n",
-    "karaoke_data.align_audio(audio_chunks[0], method=\"lyrics_data\")\n",
+    "karaoke_data.align_audio(chunk, method=\"lyrics_data\")\n",
     "print(f\"Position after lyrics data alignment: {karaoke_data.current_position}\")\n"
    ]
   },
@@ -166,7 +303,7 @@
    "outputs": [],
    "source": [
     "karaoke_data.reset_alignment()  # Resetting any prior alignments\n",
-    "karaoke_data.align_audio(audio_chunks[0], method=\"onset_detection\")\n",
+    "karaoke_data.align_audio(chunk, method=\"onset_detection\")\n",
     "print(f\"Position after onset detection alignment: {karaoke_data.current_position}\")\n"
    ]
   },
@@ -185,7 +322,7 @@
    "outputs": [],
    "source": [
     "karaoke_data.reset_alignment()  # Resetting any prior alignments\n",
-    "karaoke_data.align_audio(audio_chunks[0], method=\"cross_correlation\")\n",
+    "karaoke_data.align_audio(chunk, method=\"cross_correlation\")\n",
     "print(f\"Position after cross-correlation alignment: {karaoke_data.current_position}\")\n"
    ]
   },
@@ -202,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segment_length = len(audio_chunks[0])  # Using the length of the first audio chunk\n",
+    "segment_length = len(chunk)  # Using the length of the first audio chunk\n",
     "retrieved_original_segment, retrieved_track_segment = karaoke_data.get_next_segment(segment_length)\n"
    ]
   },
@@ -212,8 +349,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "av.wav_plot(audio_chunks[0], sr, title=\"Chunk Audio\")\n",
-    "av.play_audio(audio_chunks[0], sr)\n",
+    "av.wav_plot(chunk, sr, title=\"Chunk Audio\")\n",
+    "av.play_audio(chunk, sr)\n",
     "\n",
     "av.wav_plot(retrieved_original_segment, sr, title=\"Original Audio\")\n",
     "av.play_audio(retrieved_original_segment, sr)\n",
@@ -228,19 +365,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = librosa.samples_to_time(karaoke_data.current_position, sr=sr)\n",
-    "end_time = start_time + librosa.samples_to_time(segment_length, sr=sr)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "segment_lyrics = karaoke_data.get_lyrics(start_time, end_time)\n",
-    "for line in segment_lyrics:\n",
-    "    print(line)\n"
+    "segment_lyrics = karaoke_data.get_lyrics()\n",
+    "print(segment_lyrics)\n"
    ]
   },
   {
@@ -320,11 +446,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunk = audio_chunks[0]\n",
-    "\n",
-    "vf = [av.wav_plot, av.plot_spectrogram, av.plot_mfcc]\n",
+    "# vf = [av.wav_plot, av.plot_spectrogram, av.plot_mfcc]\n",
+    "vf = [av.wav_plot]\n",
     "trimmed_chunk = ap.trim_audio(chunk)\n",
-    "demonstrate_effect(chunk, trimmed_chunk, sr, \"Trimming\", vf)\n"
+    "# demonstrate_effect(chunk, trimmed_chunk, sr, \"Trimming\", vf)\n"
    ]
   },
   {
@@ -344,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vf = [av.wav_plot, av.plot_spectrogram, av.plot_mfcc]\n",
+    "# vf = [av.wav_plot, av.plot_spectrogram, av.plot_mfcc]\n",
     "normalized_chunk = ap.normalize_audio(chunk)\n",
     "demonstrate_effect(chunk, normalized_chunk, sr, \"Normalization\", vf)\n"
    ]
@@ -531,7 +656,9 @@
    "outputs": [],
    "source": [
     "transcriber = GoogleSpeechTranscription()\n",
-    "audio_scorer = AudioScorer(karaoke_data, transcriber)\n"
+    "\n",
+    "#fastdtw is suppose to be much faster but has bug\n",
+    "audio_scorer = AudioScorer(transcriber, 'dtaidistance_fast')\n"
    ]
   },
   {
@@ -547,8 +674,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_transcription = audio_scorer.transcribe_audio(chunk)\n",
-    "print(\"User Transcription:\", user_transcription)\n"
+    "print(karaoke_data.get_lyrics())\n"
    ]
   },
   {
@@ -557,11 +683,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = librosa.samples_to_time(karaoke_data.current_position, sr=sr)\n",
-    "end_time = start_time + librosa.samples_to_time(len(chunk), sr=sr)\n",
-    "\n",
-    "segment_lyrics = karaoke_data.get_lyrics(start_time, end_time)\n",
-    "segment_lyrics\n"
+    "transcriber.transcribe(chunk, sr)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The problem here is because the audio is long, for short audio this will work fine"
    ]
   },
   {
@@ -570,7 +699,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linguistic_score = audio_scorer.linguistic_accuracy_score(chunk, segment_lyrics[0])\n",
+    "linguistic_score = audio_scorer.linguistic_accuracy_score(chunk, sr, segment_lyrics)\n",
     "print(f\"Linguistic Accuracy Score: {linguistic_score:.2f}\")\n"
    ]
   },
@@ -578,7 +707,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Amplitude Matching Score"
+    "### Rhythm Score:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation**: Rhythm score quantifies how closely the rhythm of a user's audio matches a reference audio. It can be computed using onset strength, which is a measure of the abruptness of sound changes.\n",
+    "\n",
+    "**Implementation**: It compute onset strength for both user audio and reference audio using the `librosa.onset.onset_strength` function. It then computes the Dynamic Time Warping (DTW) similarity between these onset strength sequences to generate a rhythm score."
    ]
   },
   {
@@ -587,18 +725,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(type(chunk), chunk.shape)\n",
-    "print(type(retrieved_original_segment), retrieved_original_segment.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "amplitude_score = audio_scorer.amplitude_matching_score(chunk, retrieved_original_segment)\n",
-    "print(\"Amplitude Matching Score:\", amplitude_score)\n"
+    "rhythm_score = audio_scorer.rhythm_score(np.array(chunk), retrieved_original_segment)\n",
+    "print(\"Rhythm Score:\", rhythm_score)\n"
    ]
   },
   {
@@ -606,6 +734,15 @@
    "metadata": {},
    "source": [
     "###  Pitch Matching Score:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation**: Pitch matching score assesses how closely the pitch contour of a user's audio aligns with that of a reference audio. Pitch contour is the variation of pitch over time.\n",
+    "\n",
+    "**Implementation**: Uses the `librosa.pyin` function to extract pitch sequences from the user audio and reference audio. It then computes the DTW similarity between these pitch sequences to yield the pitch matching score."
    ]
   },
   {
@@ -622,7 +759,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rhythm Score:"
+    "### Amplitude Matching Score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation**: Amplitude matching score evaluates how well the amplitude envelope of a user's audio matches that of a reference audio.\n",
+    "\n",
+    "**Implementation**: Flattens the multi-dimensional audio arrays to 1D using `numpy.flatten`, then computes the DTW similarity between these 1D amplitude sequences to derive the amplitude matching score."
    ]
   },
   {
@@ -631,8 +777,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhythm_score = audio_scorer.rhythm_score(np.array(chunk), retrieved_original_segment)\n",
-    "print(\"Rhythm Score:\", rhythm_score)\n"
+    "audio_scorer = AudioScorer(transcriber, 'dtaidistance_fast')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amplitude_score = audio_scorer.amplitude_matching_score(chunk, retrieved_original_segment, sr)\n",
+    "print(\"Amplitude Matching Score:\", amplitude_score)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Full Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transcriber = GoogleSpeechTranscription()\n",
+    "\n",
+    "class AudioProcessingPipeline:\n",
+    "    def __init__(self, karaoke_data, attempted_audio, sr):\n",
+    "        self.sr = sr\n",
+    "        self.attempted_audio = attempted_audio\n",
+    "        self.karaoke_data = karaoke_data\n",
+    "        self.ap = AudioPreprocessor()\n",
+    "        self.audio_scorer = AudioScorer(transcriber, 'dtaidistance_fast')\n",
+    "\n",
+    "    def process_and_score(self, original_pipeline, chunk_audio_pipeline):\n",
+    "        total_scores = {\n",
+    "            \"linguistic_score\": 0,\n",
+    "            \"amplitude_score\": 0,\n",
+    "            \"pitch_score\": 0,\n",
+    "            \"rhythm_score\": 0,\n",
+    "            }\n",
+    "        num_chunks = 0\n",
+    "        for chunk in split_into_chunks(self.attempted_audio, 20):\n",
+    "            if num_chunks == 0:\n",
+    "                self.karaoke_data.reset_alignment()\n",
+    "                self.karaoke_data.align_audio(chunk, method=\"start\")\n",
+    "            original_segment, track_segment = self.karaoke_data.get_next_segment(len(chunk))\n",
+    "            original_processed = self.ap.preprocess_audio( original_segment, original_pipeline,)\n",
+    "            chunk_processed = self.ap.preprocess_audio(chunk, chunk_audio_pipeline, reference_audio=track_segment)\n",
+    "\n",
+    "            scores = self.audio_scorer.process_audio_chunk(\n",
+    "                chunk_processed, original_processed, self.karaoke_data.get_lyrics(), self.sr\n",
+    "            )\n",
+    "            num_chunks += 1\n",
+    "            for score_name, score_value in scores.items():\n",
+    "                total_scores[score_name] += score_value\n",
+    "\n",
+    "            print(scores)\n",
+    "\n",
+    "        # For now just computing average score\n",
+    "        average_scores = {score_name: score_value / num_chunks for score_name, score_value in total_scores.items()}\n",
+    "        return average_scores\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_all_songs(usable_ids):\n",
+    "    scores = {}\n",
+    "    for song_id in usable_ids:\n",
+    "        original_audio, attempted_audio, track_audio, raw_lyrics_data, sr = get_song_data(song_id)\n",
+    "        karaoke_data = KaraokeData(\n",
+    "            original_audio=original_audio,\n",
+    "            track_audio=track_audio,\n",
+    "            raw_lyrics_data=raw_lyrics_data,\n",
+    "            sampling_rate=sr\n",
+    "        )\n",
+    "        audio_pipeline = AudioProcessingPipeline(karaoke_data, attempted_audio, sr)\n",
+    "        average_score = audio_pipeline.process_and_score(\n",
+    "            original_pipeline=[],\n",
+    "            chunk_audio_pipeline=[]\n",
+    "            # If any preproceesing is done google is returning empty transcription\n",
+    "            # original_pipeline=[\"spectral_gate\", \"normalize\"],\n",
+    "            # chunk_audio_pipeline=[\"adaptive_noise_reduction\", \"spectral_gate\", \"normalize\"]\n",
+    "        )\n",
+    "        scores[song_id] = average_score\n",
+    "    return scores\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_scores = process_all_songs(['27256', '58659'])\n",
+    "for song_id, score in all_scores.items():\n",
+    "    print(f\"Song ID: {song_id}, Average Score: {score}\")\n",
+    "\n",
+    "    # Playing the song\n",
+    "    original_audio, _, _, _, sr = get_song_data(song_id)\n",
+    "    AudioVis().play_audio(original_audio, sr)\n"
    ]
   }
  ],
